k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beta-service
  labels: 
    app: beta  
spec:
  selector:
    app: beta 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
